syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message BattlePassMission {
	uint32 mission_id = 1;
	uint32 cur_progress = 2;
	uint32 total_progress = 3;
	uint32 reward_battle_pass_point = 4;
	uint32 mission_type = 5;
	MissionStatus mission_status = 6;

	enum MissionStatus {
		MISSION_STATUS_INVALID = 0;
		MISSION_STATUS_UNFINISHED = 1;
		MISSION_STATUS_FINISHED = 2;
		MISSION_STATUS_POINT_TAKEN = 3;
	}
}
