syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2241
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message WatcherEventNotify {
	uint32 watcher_id = 6;
	uint32 add_progress = 13;
}
